# startup-checker

./: Cargo.toml  README.md  app.manifest  build.rs
.github/workflows/: release.yml
src/: error.rs  lib.rs  main.rs
src/models/: item_status.rs  mod.rs  source_type.rs  startup_item.rs
src/operations/: backup.rs  mod.rs
src/permissions/: admin.rs  mod.rs
src/sources/: mod.rs  registry.rs  scheduled_tasks.rs  services.rs  startup_folder.rs
src/ui/: app.rs  mod.rs  state.rs  theme.rs
src/ui/widgets/: help.rs  list.rs  mod.rs  status_bar.rs
