[package]
name = "startup-checker"
version = "0.1.0"
edition = "2021"
authors = ["byigitt"]
description = "Windows 11 Startup Manager with Interactive TUI"
license = "MIT"
repository = "https://github.com/byigitt/startup-checker"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Windows APIs
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_TaskScheduler",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Directory paths
dirs = "6.0"

# Hashing for unique IDs
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
embed-resource = "3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
